# roleplay_bot

./: .gitignore  LICENSE  README.md  bot.py  main.py  pyproject.toml
.github/workflows/: lint.yml  release.yml
src/roleplay_bot/: __init__.py  bot.py  main.py
