[project]
name = "roleplay-bot"
version = "1.0.0"
description = "Chat with AI characters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.6.1",
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = [
    "E501",
    "UP",  # pyupgrade
    "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"
